# bsv-browser

./: .gitignore  BENCHMARKS.md  GROK_REVIEW.md  README.md  app.json  app.json.dev-template  app.json.expo-template  eas.json  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json  wdyr.ts
.claude/tasks/: context_session_hig_polish_t14.md  context_session_hig_polish_t7.md  context_session_storage_analysis.md  context_session_walletclient_research.md
.github/workflows/: publish-apk.yml
.opencode/plans/: unify-qr-scanner.md
__tests__/: AlertCard.test.tsx  Celebration.test.tsx  PressableScale.test.tsx  Toast.test.tsx  arcadeBroadcastProvider.test.ts  externalUrlRouter.test.ts  fastEcdsa.install.test.ts  fastEcdsa.parity.test.ts  generalHelpers.test.ts  injectedPolyfills.test.ts  localStorageProvider.test.tsx  metroEcdsaAlias.test.ts  mnemonicWallet.test.ts  motion.test.ts  nativeSecpPackage.test.ts  nobleBackend.test.ts  reanimated-sanity.test.tsx  render-sanity.test.tsx  sdkSignRouting.test.ts  secureClipboard.test.ts  smoke.test.ts  useHaptics.test.ts  verifyShadowRouting.test.ts  walletMonitor.test.ts  webAppManifest.test.ts
__tests__/__mocks__/: native-secp256k1.js  reanimated.js
app/: +native-intent.ts  +not-found.tsx  _layout.tsx  browser.tsx  config.tsx  connections.tsx  identity.tsx  index.tsx  legacy-payments.tsx  local-payments.tsx  logs.tsx  not-found.tsx  pair.tsx  payments.tsx  security.tsx  settings.tsx  transactions.tsx  trust.tsx  wallet-config.tsx  web3.tsx
app/auth/: mnemonic.tsx  otp.tsx  password.tsx  phone.tsx  scan-shares.tsx
components/: Balance.tsx  BasketAccessModal.tsx  BottomDrawer.tsx  CertificateAccessModal.tsx  ConfigModal.tsx  CustomSafeArea.tsx  DefaultBrowserPrompt.tsx  HomescreenShortcut.tsx  PerfProfiler.tsx  ProtocolAccessModal.tsx  QRScanner.tsx  RecommendedApps.tsx  RecoveryKeySaver.tsx  RpcApprovalModal.tsx  SpendingAuthorizationModal.tsx  SwipeableTab.tsx  TabWebView.tsx  WalletConfigPicker.tsx
components/browser/: AddressBar.tsx  AddressBarRow.tsx  BookmarkList.tsx  BottomToolbar.tsx  BrowserPage.tsx  FindInPageBar.tsx  GlassPill.tsx  HistoryList.tsx  HistoryPopover.tsx  LoadProgressBar.tsx  MenuPopover.tsx  MenuSheet.tsx  NewTabPage.tsx  PermissionModal.tsx  PermissionsScreen.tsx  SheetRouter.tsx  SuggestionsDropdown.tsx  Tabs.tsx  TabsOverview.tsx
components/onboarding/: DefaultBrowserPrompt.tsx  Web3BenefitsModal.tsx
components/ui/: AlertCard.tsx  AppChip.tsx  BlurChrome.tsx  Celebration.tsx  CustomSafeArea.tsx  ErrorBoundary.tsx  GroupedList.tsx  IconButton.tsx  ListRow.tsx  PermissionSheet.tsx  PressableScale.tsx  Sheet.tsx  Toast.tsx  index.ts
components/wallet/: AmountDisplay.tsx  AmountInput.tsx  Balance.tsx  BasketAccessModal.tsx  BsvAmountInput.tsx  PasswordHandler.tsx  ProtocolAccessModal.tsx  SatsAmountInput.tsx  SpendingAuthorizationModal.tsx
context/: BrowserModeContext.tsx  ExchangeRateContext.tsx  LocalStorageProvider.tsx  SheetContext.tsx  UserContext.tsx  WalletConnectionContext.tsx  WalletContext.tsx  config.tsx
context/i18n/: translations.tsx
context/theme/: ThemeContext.tsx  assertThemeContrast.ts  motion.ts  tokens.ts  useThemeStyles.tsx
docs/: 402_PAYMENTS.md  LOCAL_PAYMENTS.md  NOWAB_IMPLEMENTATION.md  README.md  TIER3-ENGINE-DESIGN.md  WALLET_PERFORMANCE_ARCHITECTURE.md  fund-testers.ts  fund.html  index.html  landing.html  privacy.html  profiling.md  qa-ios-cold-start-default-browser-crashes-report.md  styles.css  support.html  usage.html
docs/.well-known/: apple-app-site-association  assetlinks.json
docs/i18n/: i18n.js  lang-selector.js
funding-app/: fund.html  package-lock.json  package.json  vite.config.ts
hooks/: useAddressBarAnimation.ts  useAppDirectory.ts  useBLETransfer.ts  useDeepLinking.ts  useHaptics.ts  useHistory.ts  useMemoryHygiene.ts  usePermissionQueue.ts  usePermissions.ts  useRenderCount.ts  useWebAppManifest.ts
ios/: Podfile  Podfile.properties.json
js-notification-processor/: package-lock.json
metro-shims/: ecdsaResolve.js  empty.js
modules/native-secp256k1/android/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
native-engine-ffi/: .gitignore  BSV-RS-PIN.md  Cargo.toml  build.rs
native-engine-ffi/scripts/: build-engine-xcframework.sh
native-engine-ffi/src/: lib.rs
native-engine-ffi/tests/: conformance_engine.rs  pin_guard.rs  sign_core_crosscheck.rs  spike_parity.rs
native-engine-poc/: Cargo.toml
native-engine-poc/fixtures/: engine-sim-fixtures.json
native-engine-poc/src/: lib.rs
native-engine-poc/tests/: pin_guard.rs  sign_core_crosscheck.rs
native-secp-poc/: .gitignore  Cargo.toml
native-secp-poc/fixtures/: vectors-tsstack-head.json  vectors.json
native-secp-poc/scripts/: build-secp-xcframework.sh  gen-vectors.mjs
native-secp-poc/src/: lib.rs
native-secp-poc/tests/: conformance.rs
patches/: @bsv+sdk+2.1.6.patch  @bsv+wallet-toolbox-mobile+2.3.2.patch  expo-secure-store+55.0.14.patch  munim-bluetooth+0.3.24.patch
plugins/: withWebBrowserEntitlement.js  withXcodeLastUpgradeVersion.js
scripts/: check-signing.sh  generate-pdf.ts  version.mjs
services/: arcadeBroadcastProvider.ts  exchangeRate.ts  walletServiceConfig.ts
shared/: constants.ts
storage/: LocalStorageAdapter.ts  README.md  StorageExpoSQLite.ts  StorageExpoSQLiteImpl.ts  StorageExpoSQLiteMethods.ts  example.ts  index.ts
stores/: BookmarkStore.tsx  ConnectionStore.ts  TabStore.tsx  uiStore.ts
types/: bsv-sdk-original-ecdsa.d.ts
utils/: amountFormatHelpers.ts  arraysOfObjectsAreEqual.ts  backupShares.ts  config.ts  devMenu.ts  deviceTier.ts  engineNativeProof.ts  errorHandler.ts  exportDatabases.ts  exportTransactions.ts  externalUrlRouter.ts  fetchAndCacheAppData.ts  generalHelpers.ts  getApps.ts  importDatabases.ts  isImageUrl.ts  logging.ts  mnemonicWallet.ts  parseAppManifest.ts  parsePeerPayURI.ts  perf.ts  perfMarks.ts  permissionScript.ts  permissionsManager.ts  secpNativeProof.ts  secureClipboard.ts  simpleWalletBuilder.ts  thumbnailService.ts  translations.tsx  validateTrust.ts  walletDbRegistry.ts  walletMonitor.ts
(+133 files in other folders)
